force-app/main/default/objects/DreamITAcademySetting__c/DreamITAcademySetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Dream IT Academy Setting</label>
</CustomObject>