force-app/main/default/objects/DreamITAcademySetting__c/fields/Deactivate_VR__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate VR</label>
    <type>Checkbox</type>
</CustomField>