force-app/main/default/objects/DreamITAcademySetting__c/fields/Interest_Rate_for_this_Month__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_for_this_Month__c</fullName>
    <label>Interest Rate for this Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>