force-app/main/default/objects/DreamITAcademySetting__c/fields/show_TTD_on_Account__c.field-meta.xml
<CustomField>
    <fullName>show_TTD_on_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show TTD on Account</label>
    <type>Checkbox</type>
</CustomField>